# agentic-rag-demo

./: .gitignore  README.md
.claude/: settings.local.json
.github/: DEPLOYMENT_CHECKLIST.md  GITHUB_ACTIONS_SETUP.md  WORKFLOWS_REFERENCE.md
.github/workflows/: terraform-backend.yml  terraform-dev.yml  terraform-prod.yml
agent/: .env.example  app.py  main.py  pyproject.toml  requirements.txt
agent/src/agentic_rag/: __init__.py  agent.py  config.py  text_processing.py
agent/src/agentic_rag/tools/: __init__.py  document_manager.py  embeddings_client.py  vector_search.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SETUP.md
terraform/backend/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/environments/dev/: README.md  backend.hcl.example  dev.tfplan  main.tf  outputs.tf  plan-output.txt  terraform.tfvars.example  variables.tf
terraform/environments/prod/: README.md  backend.hcl.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/bedrock-agent/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/cloudwatch-logs/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/iam-roles/: main.tf  outputs.tf  variables.tf
terraform/modules/s3-storage/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/s3-vectors/: README.md  main.tf  outputs.tf  variables.tf
terraform/scripts/: README.md  generate-backend-configs.sh
